--- a/k8s/domain.yaml
+++ b/k8s/domain.yaml
@@ -9,24 +9,24 @@ apiVersion: "weblogic.oracle/v2"
 kind: Domain
 metadata:
   # Update this with the `domainUID` of your domain:
-  name: sample-domain1
+  name: summit-domain1
   # Update this with the namespace your domain will run in:
-  namespace: sample-domain1-ns
+  namespace: summit
   labels:
     weblogic.resourceVersion: domain-v2
     # Update this with the `domainUID` of your domain:
-    weblogic.domainUID: sample-domain1
+    weblogic.domainUID: summit-domain1
 
 spec:
   # This parameter provides the location of the WebLogic Domain Home (from the container's point of view).
   # Note that this might be in the image itself or in a mounted volume or network storage.
-  domainHome: /u01/oracle/user_projects/domains/sample-domain1
+  domainHome: /u01/oracle/user_projects/domains/summit-domain1
 
   # If the domain home is inside the Docker image, set this to `true`, otherwise set `false`:
   domainHomeInImage: true
 
   # Update this with the name of the Docker image that will be used to run your domain:
-  #image: "YOUR_OCI_REGION_CODE.ocir.io/YOUR_TENANCY_NAME/weblogic-operator-tutorial:latest"
+  #image: "phx.ocir.io/weblogick8s/rjeberha-summit-weblogic:latest"
   #image: "fra.ocir.io/johnpsmith/weblogic-operator-tutorial:latest"
   image: "phx.ocir.io/weblogick8s/weblogic-operator-tutorial:latest"
 
@@ -42,7 +42,7 @@ spec:
   # how to create that Secret at the end of this file)
   webLogicCredentialsSecret:
     # Update this with the name of the secret containing your WebLogic server boot credentials:
-    name: sample-domain1-weblogic-credentials
+    name: summit-domain1-weblogic-credentials
 
   # If you want to include the server out file into the pod's stdout, set this to `true`:
   includeServerOutInPodLog: true
