--- a/wercker.yml
+++ b/wercker.yml
@@ -13,8 +13,8 @@ build-domain-in-home-image:
   docker: true
   steps:
     - script:
-        name: Install curl and docker
-        code: apk --no-cache add curl docker
+        name: Install curl, docker and git
+        code: apk --no-cache add curl docker git
     - script:
         name: Build logging and metrics exporters
         code: |
