--- a/wercker.yml
+++ b/wercker.yml
@@ -13,8 +13,8 @@ build-domain-in-home-image:
   docker: true
   steps:
     - script:
-        name: Install curl, docker, git and maven
-        code: apk --no-cache add curl docker git maven
+        name: Install curl, docker, git, maven and java
+        code: apk --no-cache add curl docker git maven openjdk8
     - script:
         name: Build logging and metrics exporters
         code: |
