--- a/Dockerfile.create
+++ b/Dockerfile.create
@@ -11,7 +11,7 @@ RUN mkdir -p $DOMAIN_HOME && \
     chown -R oracle:oracle $DOMAIN_HOME && \
     chmod -R a+xwr $DOMAIN_HOME && \
     mkdir ${DOMAIN_HOME}/docker-build-tmp && \
-    mkdir -p $DOMAIN_HOME/wlsdeploy/applications/
+    mkdir -p $DOMAIN_HOME/wlsdeploy/applications/ \
     mkdir -p $DOMAIN_HOME/wlsdeploy/libraries/
 
 COPY scripts/* ${DOMAIN_HOME}/docker-build-tmp/
