--- a/Dockerfile.update
+++ b/Dockerfile.update
@@ -5,15 +5,15 @@ USER root
 COPY target/opdemo.war $DOMAIN_HOME/wlsdeploy/applications/
 
 COPY wls-exporter.war $DOMAIN_HOME/wlsdeploy/applications/
-COPY weblogic-logging-exporter-0.1.jar $DOMAIN_HOME/wlsdeploy/libraries/
-COPY snakeyaml-1.23.jar $DOMAIN_HOME/wlsdeploy/libraries/
+COPY weblogic-logging-exporter-0.1.jar $DOMAIN_HOME/lib/
+COPY snakeyaml-1.23.jar $DOMAIN_HOME/lib/
 
 COPY WebLogicLoggingExporter.yaml $DOMAIN_HOME/config/WebLogicLoggingExporter.yaml
 
 RUN chown -R oracle:oracle $DOMAIN_HOME/wlsdeploy/applications/ && \
     chmod -R a+xwr $DOMAIN_HOME/wlsdeploy/applications/ && \
-    chown -R oracle:oracle $DOMAIN_HOME/wlsdeploy/libraries/ && \
-    chmod -R a+xwr $DOMAIN_HOME/wlsdeploy/libraries/ && \
+    chown -R oracle:oracle $DOMAIN_HOME/lib/ && \
+    chmod -R a+xwr $DOMAIN_HOME/lib/ && \
     chown oracle:oracle $DOMAIN_HOME/config/WebLogicLoggingExporter.yaml && \
     chmod a+xwr $DOMAIN_HOME/config/WebLogicLoggingExporter.yaml
 
