--- a/k8s/domain.yaml
+++ b/k8s/domain.yaml
@@ -9,26 +9,25 @@ apiVersion: "weblogic.oracle/v2"
 kind: Domain
 metadata:
   # Update this with the `domainUID` of your domain:
-  name: summit-domain1
+  name: deltek-enterprise2
   # Update this with the namespace your domain will run in:
-  namespace: summit
+  namespace: deltek
   labels:
     weblogic.resourceVersion: domain-v2
     # Update this with the `domainUID` of your domain:
-    weblogic.domainUID: summit-domain1
+    weblogic.domainUID: deltek-enterprise2
 
 spec:
   # This parameter provides the location of the WebLogic Domain Home (from the container's point of view).
   # Note that this might be in the image itself or in a mounted volume or network storage.
-  domainHome: /u01/oracle/user_projects/domains/summit-domain1
+  domainHome: /u01/oracle/user_projects/domains/deltek-enterprise2
 
   # If the domain home is inside the Docker image, set this to `true`, otherwise set `false`:
   domainHomeInImage: true
 
   # Update this with the name of the Docker image that will be used to run your domain:
-  #image: "phx.ocir.io/weblogick8s/rjeberha-summit-weblogic:latest"
   #image: "fra.ocir.io/johnpsmith/weblogic-operator-tutorial:latest"
-  image: "phx.ocir.io/weblogick8s/weblogic-operator-tutorial:latest"
+  image: "phx.ocir.io/weblogick8s/deltek-enterprise2-weblogic:1.0"
 
   # imagePullPolicy defaults to "Always" if image version is :latest
   imagePullPolicy: "Always"
@@ -42,7 +41,7 @@ spec:
   # how to create that Secret at the end of this file)
   webLogicCredentialsSecret:
     # Update this with the name of the secret containing your WebLogic server boot credentials:
-    name: summit-domain1-weblogic-credentials
+    name: deltek-enterprise2-weblogic-credentials
 
   # If you want to include the server out file into the pod's stdout, set this to `true`:
   includeServerOutInPodLog: true
